[workspace]
members = ["russh", "russh-config", "cryptovec", "pageant", "russh-util"]
resolver = "2"

[workspace.dependencies]
aes = "0.9.0-rc.4"
async-trait = "0.1.50"
byteorder = "1.4"
bytes = "1.7"
digest = "0.11"
delegate = "0.13"
env_logger = "0.6"
futures = "0.3"
home = "0.5"
hmac = "0.13.0-rc.5"
log = "0.4.11"
rand = { version = "0.10", features = ["thread_rng"] }
sha1 = { version = "0.11.0-rc.5", features = ["oid"] }
sha2 = { version = "0.11.0-rc.5", features = ["oid"] }
signature = "3.0.0-rc.10"
ssh-encoding = { version = "0.3.0-rc.7", features = ["bytes"] }
ssh-key = { version = "0.7.0-rc.8", features = [
    "ed25519",
    "p256",
    "p384",
    "p521",
    "encryption",
    "ppk",
] }
thiserror = "1.0.30"
tokio = { version = "1.17.0" }
tokio-stream = { version = "0.1.3", features = ["net", "sync"] }

[patch.crates-io]
num-bigint = { git = "https://github.com/cuviper/num-bigint.git", branch = "rand-0.10" }
